Revamp backend metrics windows, UI panels, and debug logging